--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,7 @@ build_flags = ${common.build_flags}
               -ITFT/src/Libraries/fwlib/stm32f2xx/inc
               -ITFT/src/User/Hal/stm32f2xx
 #
-# BIGTREE_TFT35_V1.0
+BIGTREE_TFT35_V1.0
 #
 [env:BIGTREE_TFT35_V1_0]
 platform      = ststm32
@@ -75,7 +75,7 @@ build_flags   = ${stm32f10x.build_flags}
   -DTFT35_V1_0=
 
 #
-# BIGTREE_TFT35_V1.1
+BIGTREE_TFT35_V1.1
 #
 [env:BIGTREE_TFT35_V1_1]
 platform      = ststm32
@@ -90,7 +90,7 @@ build_flags   = ${stm32f10x.build_flags}
   -DTFT35_V1_1=
 
 #
-# BIGTREE_TFT35_V1.2
+ BIGTREE_TFT35_V1.2
 #
 [env:BIGTREE_TFT35_V1_2]
 platform      = ststm32
@@ -105,7 +105,7 @@ build_flags   = ${stm32f10x.build_flags}
   -DTFT35_V1_2=
 
 #
-# BIGTREE_TFT35_V2.0
+BIGTREE_TFT35_V2.0
 #
 [env:BIGTREE_TFT35_V2_0]
 platform      = ststm32
@@ -120,7 +120,7 @@ build_flags   = ${stm32f10x.build_flags}
   -DTFT35_V2_0=
 monitor_speed = 250000
 #
-# BIGTREE_TFT35_V3.0
+BIGTREE_TFT35_V3.0
 #
 [env:BIGTREE_TFT35_V3_0]
 platform      = ststm32
